tests/fixtures/invalid/none_pow_int.py
# Cannot power None and Int
x: None = None ** 1
